Overflow-x issue

--- a/sass/child.sass
+++ b/sass/child.sass
@@ -603,6 +603,7 @@ footer
 				background: url('../img/menubar-bg.gif') 50% 50% no-repeat
 				background-size: cover
 				height: 24px
+				max-width: 100%
 				&.last
 					background: #333
 			ul.mobile-status
